# sparkeKinematics

./: .gitignore  CMakeLists.txt  README.md  forward_kinematics_equations.py  leg_transformations.py  setup.cfg  transformations.py
.github/workflows/: publish_pypi.yml
include/: base_transformations.hpp  leg_transformations.hpp  sparke_base_IK.hpp  sparke_leg_IK.hpp
kinematics/: forward_kinematics.m  kinematics.py  test.py
kinematics_gui/: kinematics_controller.py  kinematics_gui.py  mainwindow.py  mainwindow.ui  matplotlib_widget.py  tree_widget.py
kinematics_np/: leg_transformations.py  sparke_base_IK.py  sparke_leg_IK.py  test_plotter.py
sparke_kinematics/: setup.cfg
sparke_kinematics_tools/: pyproject.toml  setup.cfg
sparke_kinematics_tools/src/: README.md
src/: base_transformations.cpp  leg_transformations.cpp  sparke_base_IK.cpp  sparke_leg_IK.cpp  test.cpp  test_base_transformations.cpp  test_sparke_leg_IK.cpp
src/kinematics_gui/: kinematics_controller.py  kinematics_controller_utils.py  kinematics_gui.py  mainwindow.py  mainwindow.ui  matplotlib_widget.py  trajectory_tree_widget.py  trajectory_utils.py  tree_widget.py
src/sparke_kinematics/: sparke_leg_IK.py  test_plotter.py
