[metadata]
name = sparke_kinematics_tools
version = 0.1.0a
author = Colin Fuelberth
author_email = colin.fuelberth@icloud.com
url = https://github.com/Infinite-Echo/sparkeKinematics
description = Tools for sparke_kinematics
long_description = file: README.md
long_description_content_type = text/markdown
keywords = sparke, sparke_kinematics_tools
license = MIT License
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3

[options]
install_requires =
    numpy >= 1.24.0
    matplotlib >= 3.1.2
    sparke_kinematics >= 0.0.2a